--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,9 +41,10 @@ jobs:
           plugin_people_types: followers, following
           plugin_stargazers: yes
           plugin_wakatime: yes
+          plugin_wakatime_token: ${{ secrets.WAKATIME_TOKEN }}
           plugin_wakatime_days: 7
           plugin_wakatime_limit: 5
           plugin_wakatime_sections: time, projects, projects-graphs, languages, languages-graphs, editors, os
-          plugin_wakatime_url: https://www.lucawieczorek.de/
+          plugin_wakatime_url: https://wakatime.com/
           plugin_wakatime_user: lucawieczorek
           repositories_forks: yes
